Factoría abstracta que crea factorías de persistencia